--- a/.stickler.yml
+++ b/.stickler.yml
@@ -10,5 +10,5 @@ files:
     ignore:
         - 'src/generated/*'
         - 'webroot/bower_components/*'
-        - './dist/*'
+        - 'dist/*'
 
