--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "homepage": "https://github.com/RoodzFernando/Restaurant-page-js#readme",
     "devDependencies": {
         "css-loader": "^3.5.3",
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb-base": "^14.1.0",
+        "eslint-plugin-import": "^2.20.2",
         "file-loader": "^6.0.0",
         "sass": "^1.26.7",
         "sass-loader": "^8.0.2",
